--- a/src/main/resources/templates/project/views/resourcesCollection.html
+++ b/src/main/resources/templates/project/views/resourcesCollection.html
@@ -14,16 +14,15 @@
                             <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
                         </div>
                         <div><span th:text="${project.getName()}"></span>
-                            <div class="page-title-subheading"><span th:text="${project.getDescription()}"></span></div>
+                            <div class="page-title-subheading"><span th:text="'Τρέχων στάδιο'+${project.getStatus()}"></span></div>
                         </div>
                     </div>
                     <div class="page-title-actions">
-
-                        <a th:href="@{/project/{pid}/resource/new(pid=${project.getId()})}">
-                            <button type="button" title="Προσθήκη Υλικού" class="btn-shadow mr-3 btn btn-alternate">
-                                <i class="fa fa-upload"></i>
-                            </button>
-                        </a>
+<!--                        <a th:href="@{/project/{pid}/resource/new(pid=${project.getId()})}">-->
+<!--                            <button type="button" title="Προσθήκη Υλικού" class="btn-shadow mr-3 btn btn-alternate">-->
+<!--                                <i class="fa fa-upload"></i>-->
+<!--                            </button>-->
+<!--                        </a>-->
                     </div>
                 </div>
             </div>
@@ -46,6 +45,8 @@
 <!--        <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>-->
         <!-- Complete stage confirmation modal -->
         <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
+        <!-- Previous stage confirmation modal -->
+        <th:block layout:insert="~{fragments/modals/previousStageConfirm}"/>
         <th:block layout:insert="~{fragments/modals/removeProjectResourceConfirm}"/>
     </th:block>
 </th:block>
