--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -92,7 +92,7 @@
                         <button type="submit" id="createUser"
                                 class="btn-shadow btn-wide btn-hover-shine btn btn-primary">
                             Ενημέρωση στοιχείων</button>
-                        <button type="button" id="cancel"
+                        <button type="button" id="cancel" onclick="history.back()"
                                 class="btn-shadow btn-wide float-right btn-hover-shine btn btn-secondary">
                             Άκυρο</button>
                     </div>
