--- a/src/main/resources/templates/fragments/components/projectFindingsList.html
+++ b/src/main/resources/templates/fragments/components/projectFindingsList.html
@@ -1,71 +1,73 @@
-<div xmlns:th="http://www.thymeleaf.org">
-
+<div class="col-md-7" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
     <div class="main-card mb-3 card">
+        <div class="card-header-tab card-header">
+            <div class="card-header-title font-size-lg text-capitalize font-weight-normal">
+                <i class="header-icon pe-7s-look icon-gradient bg-amy-crisp"></i>
+                Διαπιστώσεις
+            </div>
+            <div class="btn-actions-pane-right text-capitalize actions-icon-btn">
+                <div class="btn-group dropdown">
+                    <a th:href="@{/project/{pid}/finding/new(pid=${project.getId()})}">
+                        <button type="button" title="Νέα διαπίστωση" class="btn-shadow mr-3 btn btn-alternate">
+                            <i class="fa fa-plus"></i>
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="card-body">
             <div id="example_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row"><div class="col-sm-12">
-                <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered dataTable dtr-inline" role="grid" aria-describedby="example_info">
-                <thead>
-                <tr role="row">
-                    <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 383.2px;" aria-label="Position: activate to sort column ascending">Διαπίστωση</th>
-                    <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 92.4px;" aria-label="Office: activate to sort column ascending">Χρήστης</th>
-                    <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 95.4px;" aria-label="Start date: activate to sort column ascending">Ημερομηνία</th>
-                    <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 70.2px;" aria-label="Salary: activate to sort column ascending">Ψήφοι</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr role="row" class="odd">
-                    <td class="sorting_1 dtr-control">Διαπίστωση.........................</td>
-                    <td>Sokratis</td>
-                    <td>22/05/2020</td>
-                    <td class="text-center" style="width: 200px;">
-                        <div class="widget-content p-0">
-                            <div class="widget-content-outer">
-                                <div class="widget-content-wrapper">
-                                    <div class="widget-content-left pr-2">
-                                        <div class="widget-numbers fsize-1 text-danger">71</div>
-                                    </div>
-                                    <div class="widget-content-right w-100">
-                                        <div class="progress-bar-xs progress">
-                                            <div class="progress-bar bg-danger" role="progressbar"
-                                                 aria-valuenow="71" aria-valuemin="0" aria-valuemax="100"
-                                                 style="width: 71%;">
+                <div class="row">
+                    <div class="col-sm-12">
+
+                    <table style="width: 100%;" id="findings" class="table table-hover table-striped table-bordered dataTable dtr-inline" role="grid">
+                        <thead>
+                        <tr role="row">
+                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 383.2px;" aria-label="Τίτλος: activate to sort column ascending">Τίτλος</th>
+                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 383.2px;" aria-label="Περιγραφή: activate to sort column ascending">Περιγραφή</th>
+                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 92.4px;" aria-label="Χρήστης: activate to sort column ascending">Χρήστης</th>
+                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 95.4px;" aria-label="Ημερομηνία: activate to sort column ascending">Ημερομηνία</th>
+                            <th class="sorting" tabindex="0" aria-controls="example" rowspan="1" colspan="1" style="width: 70.2px;" aria-label="Ψήφοι: activate to sort column ascending">Ψήφοι</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="finding : ${findings}">
+                                <td th:text="${finding.getTitle()}">Τίτλος</td>
+                                <td th:text="${finding.getDescription()}">Περιγραφή</td>
+                                <td th:text="${finding.getUserFullName()}">Χρήστης</td>
+                                <td th:text="${finding.getDateOnly()}">1/1/2020</td>
+
+                                <td class="text-center" style="width: 200px;">
+                                    <div class="widget-content p-0">
+                                        <div class="widget-content-outer">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left pr-2">
+                                                    <div class="widget-numbers fsize-1 text-danger" th:text="${finding.getLikes()}"></div>
+                                                </div>
+                                                <div class="widget-content-right w-100">
+                                                    <div class="progress-bar-xs progress">
+                                                        <div class="progress-bar progress" role="progressbar"
+                                                             th:aria-valuenow="${finding.getLikes()}" aria-valuemin="0"
+                                                             th:aria-valuemax="${project.getTotalFindingLikes()}"
+                                                             th:style="'width:'+100*${finding.getLikes()}/${project.getTotalFindingLikes()}+'%;'">
+                                                        </div>
+                                                    </div>
+                                                </div>&nbsp;&nbsp;
+                                                <a th:href="@{/project/{pid}/finding/{fid}/like(pid=${project.getId()}, fid=${finding.getId()})}">
+                                                    <button class="mb-2 mr-2 btn-icon btn-icon-only btn-pill btn btn-primary">
+                                                        <i class="pe-7s-like2 btn-icon-wrapper"> </i>
+                                                    </button>
+                                                </a>
+
                                             </div>
                                         </div>
-                                    </div>&nbsp;&nbsp;
-                                    <button class="mb-2 mr-2 btn-icon btn-icon-only btn btn-alternate"><i class="pe-7s-like2 btn-icon-wrapper"> </i></button>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr role="row" class="even">
-                    <td class="sorting_1 dtr-control">Διαπίστωση.............</td>
-                    <td>Vassilis</td>
-                    <td>23/05/2020</td>
-                    <td class="text-center" style="width: 200px;">
-                        <div class="widget-content p-0">
-                            <div class="widget-content-outer">
-                                <div class="widget-content-wrapper">
-                                    <div class="widget-content-left pr-2">
-                                        <div class="widget-numbers fsize-1 text-danger">54</div>
                                     </div>
-                                    <div class="widget-content-right w-100">
-                                        <div class="progress-bar-xs progress">
-                                            <div class="progress-bar bg-danger" role="progressbar"
-                                                 aria-valuenow="54" aria-valuemin="0" aria-valuemax="100"
-                                                 style="width: 54%;">
-                                            </div>
-                                        </div>
-                                    </div>&nbsp;&nbsp;
-                                    <button class="mb-2 mr-2 btn-icon btn-icon-only btn btn-alternate"><i class="pe-7s-like2 btn-icon-wrapper"> </i></button>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table></div></div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
