--- a/src/main/resources/templates/fragments/htmlHead.html
+++ b/src/main/resources/templates/fragments/htmlHead.html
@@ -8,6 +8,7 @@
     <title th:text="${title}">Design Thinking Platform</title>
     <meta name="msapplication-tap-highlight" content="no">
     <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.jpg}"/>
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link href="../static/css/main.css" th:href="@{/css/main.css}" rel="stylesheet">
     <link href="../static/css/main.css" th:href="@{/css/mystyle.css}" rel="stylesheet">
     <link href="../static/css/main.css" th:href="@{/css/notfound.css}" rel="stylesheet">
