--- a/src/main/resources/templates/fragments/modals/previousStageConfirm.html
+++ b/src/main/resources/templates/fragments/modals/previousStageConfirm.html
@@ -1,22 +1,22 @@
 <div xmlns:th="http://www.thymeleaf.org">
     <div class="modal fade bd-example-modal-sm" data-backdrop="false"
-         tabindex="-1" role="dialog" id="nextStageModal"
+         tabindex="-1" role="dialog" id="previousStageModal"
          aria-labelledby="mySmallModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">
-                        Επόμενη φάση</h5>
+                        Προηγούμενη Φάση</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>Είστε σίγουροι πως θέλετε να προχωρήσετε στην επόμενη φάση;</p>
+                    <p>Είστε σίγουροι πως θέλετε να επιστρέψετε στην προηγούμενη φάση;</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Όχι</button>
-                    <a th:href="@{/admin/project/{pid}/nextStage(pid=${project.getId()})}">
+                    <a th:href="@{/admin/project/{pid}/previousStage(pid=${project.getId()})}">
                         <button type="button" class="btn btn-primary">Ναι</button>
                     </a>
                 </div>
