--- a/src/main/resources/templates/project/views/completed.html
+++ b/src/main/resources/templates/project/views/completed.html
@@ -14,7 +14,7 @@
                         <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
                     </div>
                     <div><span th:text="${project.getName()}"></span>
-                        <div class="page-title-subheading"><span th:text="${project.getDescription()}"></span></div>
+                        <div class="page-title-subheading"><span th:text="'Τρέχων στάδιο'+${project.getStatus()}"></span></div>
                     </div>
                 </div>
             </div>
