--- a/src/main/resources/templates/project/views/findingsCollection.html
+++ b/src/main/resources/templates/project/views/findingsCollection.html
@@ -14,14 +14,14 @@
                         <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
                     </div>
                     <div><span th:text="${project.getName()}"></span>
-                        <div class="page-title-subheading"><span th:text="${project.getDescription()}"></span></div>
+                        <div class="page-title-subheading"><span th:text="'Τρέχων στάδιο'+${project.getStatus()}"></span></div>
                     </div>
                 </div>
                 <div class="page-title-actions">
-                    <button type="button" data-toggle="tooltip modal" data-target="#addFindingModal" title="" data-placement="bottom"
-                            class="btn-shadow mr-3 btn btn-alternate" data-original-title="Νέα διαπίστωση">
-                        <i class="fa fa-lightbulb"></i>
-                    </button>
+<!--                    <button type="button" data-toggle="tooltip modal" data-target="#addFindingModal" title="" data-placement="bottom"-->
+<!--                            class="btn-shadow mr-3 btn btn-alternate" data-original-title="Νέα διαπίστωση">-->
+<!--                        <i class="fa fa-lightbulb"></i>-->
+<!--                    </button>-->
                 </div>
             </div>
         </div>
@@ -29,10 +29,10 @@
         <div class="row">
             <!-- Findings List component -->
             <th:block layout:insert="~{fragments/components/projectFindingsList}"/>
-            <!-- Member List component -->
-            <th:block layout:insert="~{fragments/components/projectMemberList}"/>
             <!-- project timeline component -->
             <th:block layout:insert="~{fragments/components/projectTimeline}"/>
+            <!-- Member List component -->
+            <th:block layout:insert="~{fragments/components/projectMemberList}"/>
         </div>
     </div>
         <!-- Add member modal -->
@@ -41,6 +41,8 @@
         <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>
         <!-- Complete stage confirmation modal -->
         <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
+        <!-- Previous stage confirmation modal -->
+        <th:block layout:insert="~{fragments/modals/previousStageConfirm}"/>
     </th:block>
 </th:block>
 </html>
